--- a/build.gradle
+++ b/build.gradle
@@ -67,9 +67,15 @@ dependencies {
     implementation deps.androidx.compose.navigation
     implementation deps.androidx.compose.constraintLayout
     implementation deps.androidx.compose.accompanist.swipeRefresh
+    implementation deps.androidx.compose.accompanist.flowLayout
     implementation deps.androidx.compose.uiPreview
     debugImplementation deps.androidx.compose.uiPreviewDebug
+
+    implementation deps.thirdParty.sharedElementCompose
 
     // Google
     implementation deps.google.material
 }
+
+// Add this repo for sharedElement lib in settings.gradle file
+// maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
