WIP: Add Youtube Expandable Video TODO: Add auth for Google API + Firebase

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Android X
     implementation deps.androidx.appCompat
