Implement video controller for collapsing

--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation deps.thirdParty.sharedElementCompose
     implementation deps.thirdParty.youTubePlayer
     implementation deps.thirdParty.youTubePlayerChromcast
+    implementation deps.thirdParty.coilCompose
 
     // Google
     implementation deps.google.material
