--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,10 @@ dependencies {
     implementation deps.androidx.recyclerView
     implementation deps.androidx.swipeRefreshLayout
 
+    // Window Manager
+    implementation deps.androidx.windowManager
+    implementation deps.androidx.compose.material3.windowSizeClass
+
     // Compose
     implementation deps.androidx.compose.ui
     implementation deps.androidx.compose.material
@@ -72,6 +76,7 @@ dependencies {
     implementation deps.androidx.compose.navigation
     implementation deps.androidx.compose.constraintLayout
     implementation deps.androidx.compose.accompanist.swipeRefresh
+    implementation deps.androidx.compose.accompanist.systemUiController
     implementation deps.androidx.compose.accompanist.flowLayout
     implementation deps.androidx.compose.uiPreview
     debugImplementation deps.androidx.compose.uiPreviewDebug
